schedule shows all days and is more compact

--- a/Learny/Views/Courses/ShowSchedule.cshtml
+++ b/Learny/Views/Courses/ShowSchedule.cshtml
@@ -59,3 +59,11 @@
     @Html.ActionLink("Tillbaka till kurs översikt", "Details", "Courses", new { id = Model.CourseId }, null)
 </p>
 
+@section styles{
+    <style>
+        ul {
+            margin-bottom: 0px;
+            margin-top: 0px;
+        }
+    </style>
+    }
