--- a/Learny/Views/Document/_DocumentsPartial.cshtml
+++ b/Learny/Views/Document/_DocumentsPartial.cshtml
@@ -4,7 +4,7 @@
     @foreach (var item in Model)
     {
         <li>
-            @Html.ActionLink(item.DisplayName, "Download", new { id = item.Id }, new { title = item.Description })
+            @Html.ActionLink(item.DisplayName, "OpenDocument", new { id = item.Id }, new { title = item.Description })
             @Html.ActionLink(" ", "Delete", new { id = item.Id }, new { @class = "glyphicon glyphicon-remove" })
         </li>
     }
