--- a/Learny/Views/Shared/_Layout.cshtml
+++ b/Learny/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <footer class="">
             <p>&copy; @DateTime.Now.Year - Learny</p>
         </footer>
     </div>
