--- a/Learny/Views/ModuleActivities/Details.cshtml
+++ b/Learny/Views/ModuleActivities/Details.cshtml
@@ -15,7 +15,7 @@
             <div class="panel panel-default">
 
                 <div class="panel-heading">
-                    @Html.DisplayFor(model => model.Name)
+                    <h3>@Html.DisplayFor(model => model.Name)</h3>
 
                     @if (Request.IsAuthenticated && User.IsInRole(RoleName.teacher))
                     {
@@ -73,4 +73,4 @@
 
         </div>
     </div>
-</div>
+
