--- a/Learny/Views/Courses/Index.cshtml
+++ b/Learny/Views/Courses/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     var today = DateTime.Today;
     var oldCourses = Model.Where(c => c.EndDate < today);
-    var activeCourses = Model.Where(c => c.StartDate < today && c.EndDate > today);
+    var activeCourses = Model.Where(c => c.StartDate <= today && c.EndDate >= today);
     var commingCourses = Model.Where(c => c.StartDate > today);
 }
 
@@ -136,3 +136,5 @@
         }
     </tbody>
 </table>
+
+<br /><br />
