--- a/Learny/Views/Courses/ShowSchedule.cshtml
+++ b/Learny/Views/Courses/ShowSchedule.cshtml
@@ -10,7 +10,7 @@
 <div class="panel panel-default">
 
     <div class="panel-heading">
-        <h3>@Html.DisplayFor(model => model.FullCourseName)</h3>
+        <span class="panelHeader">@Html.DisplayFor(model => model.FullCourseName)</span>
     </div>
 
     <div class="panel-body">
