add fillenddate script

--- a/Learny/Views/CourseModules/Manage.cshtml
+++ b/Learny/Views/CourseModules/Manage.cshtml
@@ -134,4 +134,5 @@ else
 
         @section Scripts {
             @Scripts.Render("~/bundles/jqueryval")
+            <script src="~/Scripts/FillEndDate.js"></script>
         }
