--- a/Learny/Views/Courses/Create.cshtml
+++ b/Learny/Views/Courses/Create.cshtml
@@ -66,4 +66,5 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Client Scripts/MvcFoolproofValidation.js"></script>
+    <script src="~/Scripts/FillEndDate.js"></script>
 }
