--- a/Learny/Views/ModuleActivities/Manage.cshtml
+++ b/Learny/Views/ModuleActivities/Manage.cshtml
@@ -161,4 +161,5 @@ else
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script src="~/Client Scripts/MvcFoolproofValidation.js"></script>
+<script src="~/Scripts/FillEndDate.js"></script>
 }
