--- a/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
+++ b/Learny/Views/ModuleActivities/_ActivitiesPartial.cshtml
@@ -22,7 +22,7 @@
             <td>
                 @if (item.Edit) {
                 
-                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id, listEdit = true})
+                    @Html.ActionLink(item.Name, "Edit", new { id = item.Id, ShowActivityList = true})
                 }
                 else
                 { 
