--- a/Learny/Views/CourseModules/Delete.cshtml
+++ b/Learny/Views/CourseModules/Delete.cshtml
@@ -31,47 +31,40 @@
 
 <h2>Ta bort</h2>
 
-<h3>Är du säker på att du vill ta bort den här modulen?</h3>
+<h3>
+    Är du säker på att du vill ta bort den här modulen?
+    <br />
+    Alla aktiviteter kommer också tas bort.
+</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Course)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Course.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Course)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Course.Name)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        <dt>&nbsp;</dt>
+        <dd></dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Name)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Name)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.Description)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Description)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.StartDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.StartDate)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.EndDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.EndDate)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+        <dt>&nbsp;</dt>
+        <dd></dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+        <dt>            Antal aktiviteter        </dt>
+        <dd>            @Html.DisplayFor(model => model.Activities.Count)        </dd>
+
+        <dt>            Antal dokument        </dt>
+        <dd>            @Html.DisplayFor(model => model.Documents.Count)        </dd>
     </dl>
 
     @using (Html.BeginForm())
@@ -91,9 +84,9 @@
             @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
-                <br />
+                <br /><br />
                 <div class="alert alert-danger">
-                    <span>Den här modulen eller dens aktiviteter har @nrOfDocuments dokument.</span>
+                    <span>Den här modulen eller dess aktiviteter har @nrOfDocuments dokument.</span>
                 </div>
             }
         </div>
