--- a/Learny/Views/Courses/Delete.cshtml
+++ b/Learny/Views/Courses/Delete.cshtml
@@ -61,63 +61,35 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Name)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Name)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.CourseCode)        </dt>
+        <dd>            @Html.DisplayFor(model => model.CourseCode)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseCode)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Description)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Description)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CourseCode)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.StartDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.StartDate)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.EndDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.EndDate)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+        <dt>&nbsp;</dt>
+        <dd></dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+        <dt>            Antal moduler        </dt>
+        <dd>            @Html.DisplayFor(model => model.Modules.Count)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+        <dt>            Antal aktiviteter        </dt>
+        <dd>            @Html.DisplayFor(model => nrOfActivities)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+        <dt>            Antal elever        </dt>
+        <dd>            @Html.DisplayFor(model => model.Students.Count)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
-        <dt>
-            Antal moduler
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Modules.Count)
-        </dd>
-        <dt>
-            Antal aktiviteter
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => nrOfActivities)
-        </dd>
-        <dt>
-            Antal elever
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Students.Count)
-        </dd>
+        <dt>            Antal dokument        </dt>
+        <dd>            @Html.DisplayFor(model => model.Documents.Count)        </dd>
     </dl>
 
     @using (Html.BeginForm())
@@ -137,9 +109,9 @@
             @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
-                <br />
+                <br /><br />
                 <div class="alert alert-danger">
-                    <span>Den här kursen eller dens moduler och aktiviteter har @nrOfDocuments dokument.</span>
+                    <span>Den här kursen eller dess moduler och aktiviteter har @nrOfDocuments dokument.</span>
                 </div>
             }
         </div>
