--- a/Learny/Views/ModuleActivities/Delete.cshtml
+++ b/Learny/Views/ModuleActivities/Delete.cshtml
@@ -20,57 +20,35 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseModule.Course)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CourseModule.Course.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CourseModule)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CourseModule.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ActivityType)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Module.Course)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Module.Course.Name)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ActivityType.Name)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.Module)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Module.Name)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
+        <dt>&nbsp;</dt>
+        <dd></dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.ActivityType)        </dt>
+        <dd>            @Html.DisplayFor(model => model.ActivityType.Name)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.Name)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Name)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.Description)        </dt>
+        <dd>            @Html.DisplayFor(model => model.Description)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
+        <dt>            @Html.DisplayNameFor(model => model.StartDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.StartDate)        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
+        <dt>            @Html.DisplayNameFor(model => model.EndDate)        </dt>
+        <dd>            @Html.DisplayFor(model => model.EndDate)        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
-        </dt>
+        <dt>&nbsp;</dt>
+        <dd></dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.EndDate)
-        </dd>
+        <dt>            Antal dokument        </dt>
+        <dd>            @Html.DisplayFor(model => model.Documents.Count)        </dd>
     </dl>
 
     @using (Html.BeginForm())
@@ -90,7 +68,7 @@
             @Html.ActionLink("Tillbaka", "Details", new { id = Model.Id })
             @if (!allowDelete)
             {
-                <br />
+                <br /><br />
                 <div class="alert alert-danger">
                     <span>Den här aktiviteten har @nrOfDocuments dokument.</span>
                 </div>
